2004-07-20  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4: fixed Darwin autoconf breakage caused by
	recent CFLAGS reordering.
	* unix/configure: regen

	* macosx/Makefile: added support to tk framework build to
	optionally install tk manpages in addition to html help,
	similarly to tcl/macosx/Makefile.
	
	* macosx/Wish.pbproj/project.pbxproj: fixes for building with
	non-default SYMROOT/OBJROOT/SRCROOT, added support for using a
	Tcl.framework in DYLIB_INSTALL_PATH != /Library/Frameworks,
	added optional support for building html help without tcl sources 
	present by giving explicit location of tcltk-man2html script.
	
	* macosx/tkMacOSXMenu.c: fixed #include case sensitivity bug.

2004-07-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in, unix/tcl.m4:     move (C|LD)FLAGS after their
	* unix/configure.in, unix/configure: _DEFAULT to allow for env
	setting to override m4 switches.
	Consolidate header checks to limit redundancy in configure.
	(CFLAGS_WARNING): Remove -Wconversion, add -fno-strict-aliasing
	for gcc builds (need to suppress 3.x type puning warnings).
	(SC_ENABLE_THREADS): Set m4 to force threaded build when built
	against a threaded Tcl core.
	Reorder configure.in for better 64-bit build configuration,
	replacing EXTRA_CFLAGS with CFLAGS.  [Bug #874058]

2004-07-14  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXCursor.c (TkpSetCursor): The code to not
	reset the cursor more often than necessary was getting fooled
	when the current cursor was nulled out when the current cursor
	gets freed.  So in the case where the input cursor was NULL, we
	have to just always set it. [Bug #894550]
	
2004-07-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkUndo.c (TkUndoSetDepth): correct -maxundo
	segfault. [Bug #969358] (jiangwu)

	* generic/tk.h (TK_PATCH_LEVEL): 
	* README, macosx/Wish.pbproj/project.pbxproj:      bumped to
	* unix/configure, unix/configure.in, unix/tk.spec: patchlevel 8.4.7
	* win/configure, win/configure.in:
